--- a/index_test.html
+++ b/index_test.html
@@ -3,133 +3,137 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Tarot Estelar | Sandra Depianti</title>
+  <title>Tarot Estelar | Sandra Depianti</title>
+  <link href="css/test.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/full-width-pics.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/full-width-pics.css" rel="stylesheet">
-    <link href="css/test" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"><strong>Tarot Estelar</strong></a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#">Sobre mí</a>
-                        </li>
-                        <li>
-                            <a href="#">Donde encontrarme</a>
-                        </li>
-                        <li>
-                            <a href="#">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><strong>Tarot Estelar</strong></a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="#">Sobre mí</a>
+          </li>
+          <li>
+            <a href="#">Donde encontrarme</a>
+          </li>
+          <li>
+            <a href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 
-        <!-- Full Width Image Header with Logo -->
-        <!-- Image backgrounds are set within the full-width-pics.css file. -->
-        <header class="image-bg-fluid-height">
-            <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
-        </header>
-        <!-- Content Section -->
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
-                        <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
-                        <p>El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena.</p>
-                        <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
-                            una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
-                            personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
-                            respuestas en la conducta ante las alternativas cotidianas.</p>
-                            <p>Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
-                                formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
-                                existencia, aun los dolorosos, para convertirlos en alimento del alma.</p>
-                                <p>A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
-                                    un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
-                                    autosanación, ejercitando y educando nuestras capacidades internas para logra la
-                                    transpersonalidad.</p>
-                                    <p>El Tarot Estelar plantea la formación de personas capaces de generar sus propios procesos
-                                        de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+  <!-- Full Width Image Header with Logo -->
+  <!-- Image backgrounds are set within the full-width-pics.css file. -->
+  <header class="image-bg-fluid-height logo-container">
+    <img class="img-responsive img-center logo" src="img/Logo Tarot.png">
+  </header>
+  <!-- Content Section -->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
+          <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
+          <p class="texto-justificado section-paragraph">El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena.
+            <br/>
+           Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
+            una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
+            personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
+            respuestas en la conducta ante las alternativas cotidianas.
+            <br/>
+            Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
+            formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
+            existencia, aun los dolorosos, para convertirlos en alimento del alma.
+            <br/>
+            A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
+            un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
+            autosanación, ejercitando y educando nuestras capacidades internas para logra la
+            transpersonalidad.
+            <br/>
+            El Tarot Estelar plantea la formación de personas capaces de generar sus propios procesos
+            de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-                        <!-- Fixed Height Image Aside -->
-                        <!-- Image backgrounds are set within the full-width-pics.css file. -->
-                        <aside class="image-bg-fixed-height"></aside>
+    <!-- Fixed Height Image Aside -->
+    <!-- Image backgrounds are set within the full-width-pics.css file. -->
+    <aside class="image-bg-fixed-height"></aside>
 
-                        <!-- Content Section -->
-                        <section>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                    <h1 class="section-heading">Sobre mí</h1>
-                                        <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                        <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-                                    </div>
-                                </div>
-                                <!-- /.row -->
-                            </div>
-                            <!-- /.container -->
-                        </section>
+    <!-- Content Section -->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="section-heading">Sobre mí</h1>
+            <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
 
-                        <!-- Footer -->
-                        <footer>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <p>Copyright &copy; Your Website 2014</p>
-                                    </div>
-                                </div>
-                                <!-- /.row -->
-                            </div>
-                            <!-- /.container -->
-                        </footer>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Copyright &copy; Your Website 2014</p>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </footer>
 
-                        <!-- jQuery -->
-                        <script src="js/jquery.js"></script>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-                        <!-- Bootstrap Core JavaScript -->
-                        <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-                    </body>
+  </body>
 
-                    </html>
+  </html>
