--- a/index.html
+++ b/index.html
@@ -1,106 +1,160 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
 
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
 
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-        <section class="main_container">
-            <header>
-                <h1>Tarot Estelar</h1>
-                <div><i class="fa fa-bars" aria-hidden="true"></i></div>
-                <nav class="navigation-bar">
-                    <ul>
-                        <li><a>Tarot Estelar</a></li>
-                        <li><a href="#">About me</a></li>
-                        <li><a href="#">Contact me</a></li>
-                        <li><a href="#">Blog</a></li>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Tarot Estelar | Sandra Depianti</title>
+    <link href="css/main.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+    <div class="container drop-shadow">
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+                    <a class="navbar-brand" href="#"><strong>Tarot Estelar</strong></a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">Sobre mí</a>
+                        </li>
+                        <li>
+                            <a href="#">Donde encontrarme</a>
+                        </li>
+                        <li>
+                            <a href="#">Contacto</a>
+                        </li>
                     </ul>
-                </nav>
-            </header>
-            <section class="general-container">
-                <article class="home-description">
-                    <h2>¿Qué es el Tarot Estelar?</h2>
-                    <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
-                        conciencia y mutación profunda para vivir una vida plena.</p>
-                    <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
-                        una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
-                        personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
-                        respuestas en la conducta ante las alternativas cotidianas.</p>
-                    <p>Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
-                        formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
-                        existencia, aun los dolorosos, para convertirlos en alimento del alma.</p>
-                    <p>A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
-                        un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
-                        autosanación, ejercitando y educando nuestras capacidades internas para logra la
-                        transpersonalidad.</p>
-                    <p>El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
-                        de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
-                </article>
-                <article class="comments">
-                    <h2>Comments</h2>
-                    <div class="single-comment">
-                        <img src="apple-touch-icon.png"/>
-                        <p class="username">Anonimous wilkins</p>
-                        <p class="date-comment">12 de Agosto del 2017</p>
-                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
-                    </div>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
 
-                    <div class="single-comment">
-                        <img src="apple-touch-icon.png"/>
-                        <p class="username">Anonimous wilkins</p>
-                        <p class="date-comment">12 de Agosto del 2017</p>
-                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
+        <!-- Full Width Image Header with Logo -->
+        <!-- Image backgrounds are set within the full-width-pics.css file. -->
+        <header class="image-bg-fluid-height">
+            <img class="img-responsive img-center logo" src="img/Logo Tarot.png">
+        </header>
+        <!-- Content Section -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
+                        <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
+                        <p class="texto-justificado section-paragraph">El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia
+                            y mutación profunda para vivir una vida plena.
+                            <br/> Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse
+                            con una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la personalidad
+                            entera y permitirán surgir una personalidad más evolucionada, con nuevas respuestas en la conducta
+                            ante las alternativas cotidianas.
+                            <br/> Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación
+                            y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra existencia, aun
+                            los dolorosos, para convertirlos en alimento del alma.
+                            <br/> A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte
+                            en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la autosanación,
+                            ejercitando y educando nuestras capacidades internas para logra la transpersonalidad.
+                            <br/> El Tarot Estelar plantea la formación de personas capaces de generar sus propios procesos
+                            de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
                     </div>
-
-                    <div class="single-comment">
-                        <img src="apple-touch-icon.png"/>
-                        <p class="username">Anonimous wilkins</p>
-                        <p class="date-comment">12 de Agosto del 2017</p>
-                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
-                    </div>
-
-                    <div class="single-comment">
-                        <img src="apple-touch-icon.png"/>
-                        <p class="username">Anonimous wilkins</p>
-                        <p class="date-comment">12 de Agosto del 2017</p>
-                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
-                    </div>
-                </article>
-                <footer>
-                    <nav class="footer-bar">
-                        <ul>
-                            <li><a>Tarot Estelar</a></li>
-                            <li><a href="#">About me</a></li>
-                            <li><a href="#">Contact me</a></li>
-                            <li><a href="#">Blog</a></li>
-                        </ul>
-                    </nav>
-                </footer>
-            </section>
+                </div>
+            </div>
         </section>
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+        <!-- Fixed Height Image Aside -->
+        <!-- Image backgrounds are set within the full-width-pics.css file. -->
+        <div id="tarotThingsCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#tarotThingsCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#tarotThingsCarousel" data-slide-to="1"></li>
+                <li data-target="#tarotThingsCarousel" data-slide-to="2"></li>
+                <li data-target="#tarotThingsCarousel" data-slide-to="3"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/carousel_corazon_mutacion.jpg" alt="corazon">
+                    <div class="carousel-caption">
+                        <h3>Emprender una vía creativa</h3>
+                        <p>Emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/carousel_pensamiento_creativo.jpg" alt="pensamiento">
+                    <div class="carousel-caption">
+                        <h3>Trascender la conciencia ordinaria</h3>
+                        <p>Trascender la conciencia ordinaria y llegar a conectarse con una realidad superior</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/carousel_camino.jpg" alt="realidad">
+                    <div class="carousel-caption">
+                        <h3>Mirarnos con nuevos ojos</h3>
+                        <p>Aceptar nuestra tarea de formación y trabajo en un camino dodne aprenderemos a integrar los aspectos
+                            de nuestra existencia</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/carousel_autosanacion.jpg" alt="autosanacion">
+                    <div class="carousel-caption">
+                        <h3>A partir de una decisión voluntaria</h3>
+                        <p>El practicante se convierte en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación
+                            y la autosanación</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#tarotThingsCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span></a>
+            <a class="right carousel-control" href="#tarotThingsCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span></a>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Copyright &copy; Your Website 2014</p>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </footer>
+
+    </div>
+</body>
+
 </html>
