--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-    <div class="container drop-shadow">
+    <div class="container-fluid drop-shadow col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+
         <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!--<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -34,7 +34,6 @@
         </button>
                     <a class="navbar-brand" href="#"><strong>Tarot Estelar</strong></a>
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
@@ -48,104 +47,90 @@
                         </li>
                     </ul>
                 </div>
-                <!-- /.navbar-collapse -->
             </div>
-            <!-- /.container -->
-        </nav>
-
-        <!-- Full Width Image Header with Logo -->
-        <!-- Image backgrounds are set within the full-width-pics.css file. -->
-        <header class="image-bg-fluid-height">
+        </nav>-->
+        <div class="background-primary row"> 
+            <!-- Full Width Image Header with Logo -->
+            <!-- Image backgrounds are set within the full-width-pics.css file. 
+            <header class="image-bg-fluid-height">
+            </header>-->
             <img class="img-responsive img-center logo" src="img/Logo Tarot.png">
-        </header>
-        <!-- Content Section -->
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
-                        <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
-                        <p class="texto-justificado section-paragraph">El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia
-                            y mutación profunda para vivir una vida plena.
-                            <br/> Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse
-                            con una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la personalidad
-                            entera y permitirán surgir una personalidad más evolucionada, con nuevas respuestas en la conducta
-                            ante las alternativas cotidianas.
-                            <br/> Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación
-                            y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra existencia, aun
-                            los dolorosos, para convertirlos en alimento del alma.
-                            <br/> A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte
-                            en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la autosanación,
-                            ejercitando y educando nuestras capacidades internas para logra la transpersonalidad.
-                            <br/> El Tarot Estelar plantea la formación de personas capaces de generar sus propios procesos
-                            de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+            
+        </div>
+        <div class="row"> 
+            <img src="img/retrato_test.jpg" class="img-thumbnail pull-right retrato" alt="Retrato Sandra Depianti">
+            <!-- Content Section -->
+            <section>
+                <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
+                <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
+                
+                <p class="texto-justificado section-paragraph"> El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena.<br/> Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas respuestas en la conducta ante las alternativas cotidianas.<br/> Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra existencia, aun los dolorosos, para convertirlos en alimento del alma.<br/> A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la autosanación, ejercitando y educando nuestras capacidades internas para logra la transpersonalidad.<br/> El Tarot Estelar plantea la formación de personas capaces de generar sus propios procesos de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+
+            </section>
+
+        </div>
+        <div class="row"> 
+            <!-- Fixed Height Image Aside -->
+            <!-- Image backgrounds are set within the full-width-pics.css file. -->
+            <div id="tarotThingsCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#tarotThingsCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#tarotThingsCarousel" data-slide-to="1"></li>
+                    <li data-target="#tarotThingsCarousel" data-slide-to="2"></li>
+                    <li data-target="#tarotThingsCarousel" data-slide-to="3"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="img/carousel_corazon_mutacion.jpg" alt="corazon">
+                        <div class="carousel-caption">
+                            <h3>Emprender una vía creativa</h3>
+                            <p>Emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/carousel_pensamiento_creativo.jpg" alt="pensamiento">
+                        <div class="carousel-caption">
+                            <h3>Trascender la conciencia ordinaria</h3>
+                            <p>Trascender la conciencia ordinaria y llegar a conectarse con una realidad superior</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/carousel_camino.jpg" alt="realidad">
+                        <div class="carousel-caption">
+                            <h3>Mirarnos con nuevos ojos</h3>
+                            <p>Aceptar nuestra tarea de formación y trabajo en un camino dodne aprenderemos a integrar los aspectos de nuestra existencia</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/carousel_autosanacion.jpg" alt="autosanacion">
+                        <div class="carousel-caption">
+                            <h3>A partir de una decisión voluntaria</h3>
+                            <p>El practicante se convierte en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la autosanación</p>
+                        </div>
                     </div>
                 </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#tarotThingsCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#tarotThingsCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span>
+                </a>
             </div>
-        </section>
-
-        <!-- Fixed Height Image Aside -->
-        <!-- Image backgrounds are set within the full-width-pics.css file. -->
-        <div id="tarotThingsCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#tarotThingsCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#tarotThingsCarousel" data-slide-to="1"></li>
-                <li data-target="#tarotThingsCarousel" data-slide-to="2"></li>
-                <li data-target="#tarotThingsCarousel" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="img/carousel_corazon_mutacion.jpg" alt="corazon">
-                    <div class="carousel-caption">
-                        <h3>Emprender una vía creativa</h3>
-                        <p>Emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/carousel_pensamiento_creativo.jpg" alt="pensamiento">
-                    <div class="carousel-caption">
-                        <h3>Trascender la conciencia ordinaria</h3>
-                        <p>Trascender la conciencia ordinaria y llegar a conectarse con una realidad superior</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/carousel_camino.jpg" alt="realidad">
-                    <div class="carousel-caption">
-                        <h3>Mirarnos con nuevos ojos</h3>
-                        <p>Aceptar nuestra tarea de formación y trabajo en un camino dodne aprenderemos a integrar los aspectos
-                            de nuestra existencia</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/carousel_autosanacion.jpg" alt="autosanacion">
-                    <div class="carousel-caption">
-                        <h3>A partir de una decisión voluntaria</h3>
-                        <p>El practicante se convierte en un explorador de esta vía, que ofrece recursos infinitos para la autosuperación
-                            y la autosanación</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#tarotThingsCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span></a>
-            <a class="right carousel-control" href="#tarotThingsCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span></a>
         </div>
 
         <!-- Footer -->
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-8">
                         <p>Copyright &copy; Your Website 2014</p>
                     </div>
                 </div>
@@ -153,7 +138,6 @@
             </div>
             <!-- /.container -->
         </footer>
-
     </div>
 </body>
 
